* Tue Oct  5 2021 KaiGai Kohei <kaigai@heterodb.com> - 3.2-1
- GpuPreAgg: reduction logic reworked (local+global hybrid hash)
- GpuPreAgg: add hyper-log-log cardinarity estimation with hll_count(X)
- Add information views for CUDA programs/shared memory chunks
- Add truncate handler for PG14
- Various bug fixes

* Sat Aug 21 2021 KaiGai Kohei <kaigai@heterodb.com> - 3.1-1
- Arrow_Fdw supports min/max statistics as like BRIN index
- GpuCache: BEFORE TRUNCATE trigger is not needed on PG13
- GpuCache: add corruption state if failed on redo-log-apply
- Now PG-Strom can be built standalong (w/o heterodb-extra)
- various bug fixes

* Wed Jun 30 2021 KaiGai Kohei <kaigai@heterodb.com> - 3.0-2
- Built for CUDA11.4

* Tue Jun 29 2021 KaiGai Kohei <kaigai@heterodb.com> - 3.0-1
- several PostGIS functions are added for GPU execution
- GiST-index support was added for GpuJoin
- GpuCache was added for small data workloads
- experimental support of NVIDIA GPUDirect Storage
- support of custom GPU types/functions with 3rd party modules
- pg2arrow/arrow_fdw support wider Arrow files than PG limit
- pcap2arrow was added to capture network packets as Arrow files
- experimental support of 8bit-integer type (int1)
- add support of Ampere GPUs (A100) and CUDA11.3
- add support of PostgreSQL 13.x, drop support of PostgreSQL 10.x
- add support of ScaleFlux CSD drives as source of GPUDirect SQL
- error reports in GPU kernels were more human readable
- ...and miscellaneous improvement and fix various bugs

* Tue Mar 24 2020 KaiGai Kohei <kaigai@heterodb.com> - 2.3-1
- GpuJoin supports parallel execution on inner hash/heap table.
- Partition-wise GpuJoin was refactored for better query plan.
- Arrow_Fdw now supports INSERT/TRUNCATE commands.
- mysql2arrow was added, for collaboration with MySQL database.
- CuPy_Strom enables to share data frame between DB and Python.
- PL/CUDA was deprecated, CuPy + CuPy_Strom can do same jobs.
- Gstore_Fdw was deprecated, Arrow_Fdw is successor
